--- a/Erich Wang PMG SQL.ipynb
+++ b/Erich Wang PMG SQL.ipynb
@@ -7,12 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Erich Wang PMG SQL"
+    "#Erich Wang PMG SQL Challenge\n",
+    "#Code below written in SQL Format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8034ac7f",
    "metadata": {},
    "outputs": [],
@@ -23,9 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "d8fab5e7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -56,12 +59,19 @@
       "1    GA          39666\n",
       "2    OH          37577\n",
       "Question 3: \n",
-      "   campaign_id  total_cost  total_impressions  total_clicks  total_revenue\n",
-      "0     55304737     4075.50              40938         29652         155308\n",
-      "1     64441550     4170.51              42810         38724         151792\n",
-      "2     86363015     3970.14              47508         33318         163396\n",
-      "3     89363211    15809.04             158280        116048         551672\n",
-      "4     99058240     4077.15              25641         33663         136404\n",
+      "   campaign_id       name  total_cost  total_impressions  total_clicks  \\\n",
+      "0     55304737  Campaign2     4075.50              40938         29652   \n",
+      "1     64441550  Campaign1     4170.51              42810         38724   \n",
+      "2     86363015  Campaign4     3970.14              47508         33318   \n",
+      "3     89363211  Campaign3    15809.04             158280        116048   \n",
+      "4     99058240  Campaign5     4077.15              25641         33663   \n",
+      "\n",
+      "   total_revenue  \n",
+      "0         155308  \n",
+      "1         151792  \n",
+      "2         163396  \n",
+      "3         551672  \n",
+      "4         136404  \n",
       "Question 4: \n",
       "  state  total_conversions\n",
       "0    GA               3342\n",
@@ -120,7 +130,7 @@
     "    query2 = \"SELECT state, SUM(revenue) AS total_revenue FROM website_revenue GROUP BY state ORDER BY total_revenue DESC LIMIT 3;\"\n",
     "    result2 = pd.read_sql_query(query2, conn)\n",
     "    \n",
-    "    query3 = \"SELECT m.campaign_id, SUM(cost) AS total_cost, SUM(impressions) AS total_impressions, SUM(clicks) AS total_clicks, SUM(revenue) AS total_revenue FROM marketing_performance AS m LEFT JOIN website_revenue AS w ON m.campaign_id = w.campaign_id GROUP BY m.campaign_id;\"\n",
+    "    query3 = \"SELECT m.campaign_id, ci.name, SUM(m.cost) AS total_cost, SUM(m.impressions) AS total_impressions, SUM(m.clicks) AS total_clicks, SUM(w.revenue) AS total_revenue FROM marketing_performance AS m LEFT JOIN website_revenue AS w ON m.campaign_id = w.campaign_id LEFT JOIN campaign AS ci ON m.campaign_id = ci.id GROUP BY m.campaign_id, ci.name;\"\n",
     "    result3 = pd.read_sql_query(query3, conn)\n",
     "    \n",
     "    query4 = \"SELECT wr.state, SUM(mp.conversions) AS total_conversions FROM campaign AS ci INNER JOIN marketing_performance AS mp ON ci.id = mp.campaign_id LEFT JOIN website_revenue AS wr ON ci.id = wr.campaign_id WHERE ci.name = 'Campaign5' GROUP BY wr.state ORDER BY total_conversions DESC LIMIT 1;\"\n",
@@ -174,17 +184,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ed6ee4d",
+   "execution_count": 3,
+   "id": "4f77aaeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Problem 2: 3rd best state Ohio generated 37577 total revenue. "
+    "#Question 1, 2, 3, 4, 5 output above\n",
+    "# More detailed explanation below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "0ed6ee4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Problem 2: \n",
+    "# state  total_revenue\n",
+    "#0    NY          46398\n",
+    "#1    GA          39666\n",
+    "#2    OH          37577\n",
+    "\n",
+    "#3rd best state Ohio generated 37577 total revenue. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b05509a0",
    "metadata": {},
    "outputs": [],
